--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,26 @@
 <app-adblocker-detector></app-adblocker-detector>
+
+<div class="container text-center mt-5">
+    <h1>Welcome to MyPDFSigner</h1>
+    <p>Sign your PDFs for free!</p>
+  
+    <div class="row mt-5">
+      <div class="col-md-6 offset-md-3">
+        <div class="card">
+          <div class="card-body">
+            <h2>Upload your PDF</h2>
+            <p>Select a PDF file to sign:</p>
+            
+            <!-- File upload form -->
+            <form>
+              <div class="form-group">
+                <input type="file" class="form-control" id="pdfFile" accept=".pdf">
+              </div>
+              
+              <button type="submit" class="btn btn-primary btn-block" style="margin-top: 5px;">Sign PDF</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
