--- a/src/app/components/adblocker-detector/adblocker-detector.component.html
+++ b/src/app/components/adblocker-detector/adblocker-detector.component.html
@@ -5,6 +5,6 @@
         </div>
         <h2>AdBlock Detected</h2>
         <p style="text-align: justify;">We have detected that you are using an AdBlocker, since I've been so kind to write this tool for you and make it's usage entirely free it's only fair that I at least get some ad revenue, turn that off right now.</p>
-        <button class="acknowledge-button">Alright daddy I'm sorry</button>
+        <button class="acknowledge-button" (click)="sorryDaddy()">Alright daddy I'm sorry</button>
     </div>
 </div>
