--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,28 @@
 <app-adblocker-detector></app-adblocker-detector>
-
 <div class="container text-center mt-5">
-    <h1>Welcome to MyPDFSigner</h1>
-    <p>Sign your PDFs for free!</p>
+    <div class="jumbotron title">
+      <h1 class="display-4">Welcome to MyPDFSigner</h1>
+      <p class="lead">Sign your PDFs for free with ease.</p>
+    </div>
   
-    <div class="row mt-5">
+    <div class="row mt-5" *ngIf="!openSigner">
       <div class="col-md-6 offset-md-3">
-        <div class="card">
+        <div class="card upload-card">
           <div class="card-body">
-            <h2>Upload your PDF</h2>
-            <p>Select a PDF file to sign:</p>
+            <h2 class="text-center">Upload your PDF</h2>
+            <p class="text-muted text-center">Select a PDF file to sign:</p>
             
             <!-- File upload form -->
             <form>
               <div class="form-group">
-                <input type="file" class="form-control" id="pdfFile" accept=".pdf">
+                <input type="file" class="form-control" id="pdfFile" accept=".pdf" (change)="fileCatcher($event)">
               </div>
-              
-              <button type="submit" class="btn btn-primary btn-block" style="margin-top: 5px;">Sign PDF</button>
+              <button [disabled]="!pdfToSign" (click)="openSigner = true" style="margin-top: 5px;" class="btn btn-primary btn-block">Sign PDF</button>
             </form>
           </div>
         </div>
       </div>
     </div>
+
+    <app-signer *ngIf="openSigner" [pdfToSign]="pdfToSign!"></app-signer>
   </div>
