--- a/src/app/components/signer/signer.component.html
+++ b/src/app/components/signer/signer.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
     <div class="row">
       <div class="col-md-8">
-        <canvas #pdfCanvas (mousedown)="startDrawing($event)" (mousemove)="draw($event)" (mouseup)="endDrawing()" (mouseleave)="endDrawing()"></canvas>
+        <canvas #pdfCanvas (mousedown)="startDrawing($event)" (mousemove)="draw($event)" (mouseup)="endDrawing()" (mouseleave)="mouseLeaveCheck()"></canvas>
       </div>
       <div class="col-md-4">
         <input type="color" [(ngModel)]="selectedColor">
