--- a/src/app/components/signer/signer.component.html
+++ b/src/app/components/signer/signer.component.html
@@ -11,7 +11,7 @@
           <button class="btn btn-secondary" (click)="goToNextPage()">Next Page</button>
         </div>
         <button class="btn btn-danger" (click)="undoLastAction()">Undo</button>
-        <button class="btn btn-success" (click)="downloadModifiedPDF()">Download PDF</button>
+        <button class="btn btn-success" (click)="downloadPDF()">Download PDF</button>
       </div>
     </div>
   </div>
